...
        }
    }

    private fun viewList() {

        val opcaoMenu = listOf(
            "APONTAMENTO",
            "CONFIGURAÇÃO",
            "SAIR",
        )

        val listAdapter = CustomAdapter(opcaoMenu).apply {
            onItemClick = { text, _ ->
                when(text){
...
